[project]
name = "fretting-analyzer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Takumi", email = "taku.marine@icloud.com" }
]
dependencies = [
    "ipykernel>=6.25.1",
    "pandas>=2.0.3",
    "scipy>=1.10.1",
    "PySimpleGUI>=4.60.5",
    "matplotlib>=3.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
